# candy_cane

./: .gitignore  Cargo.toml  README.md  raw-results.txt  results-mutex.txt  results.csv  results.txt
benches/: all_benches.rs  chunk_size.rs  framework.rs  mod.rs
src/: lib.rs  raw.rs  slice_tracker.rs
src/iter/: mod.rs  normal.rs  streaming.rs
tester/: Cargo.toml
tester/src/: main.rs
tests/: mod.rs  publicity.rs
