[package]
name = "candy_cane"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "chunk_size"
harness = false

[dependencies]
parking_lot = "0.11.1"
arrayvec = "0.7.1"
atomic_deque = { path = "../atomic_deque" }

[dev-dependencies]
hushed_panic = "0.1.1"
criterion = "0.3.5"
