[package]
name = "candy_cane"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bench]]
# name = "chunk_size"
# harness = false

[[bench]]
name = "all_benches"
harness = true

[dependencies]
parking_lot = "0.11.1"
arrayvec = "0.7.1"
# criterion = "0.3.5"

[dev-dependencies]
hushed_panic = "0.1.1"
